Fixed layout on iphone

--- a/web/style.css
+++ b/web/style.css
@@ -1,9 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
 
 html, body {
     margin: 0;
     padding: 0;
-    /*overflow: hidden;*/
     background-color: #eaeaea;
     font-family: 'Poppins', 'sans-serif';
 }
@@ -18,17 +17,13 @@ html, body {
 }
 
 #animationContainer {
-    /*max-height: 50%;*/
-    /*background-color: #FFF;*/
-    /*top: 0;*/
-    /*left: 0;*/
-    /*right: 0;*/
-    /*bottom: 0;*/
-    /*margin: auto;*/
+    max-height: 50%;
+    margin: 0
 }
 
 h1 {
     font-size: 1.6em;
+    font-weight: bold;
 }
 
 #powerBars {
@@ -43,7 +38,6 @@ h1 {
 #powerBarRight {
     width: calc(50%);
     right: 0px;
-    /*background: antiquewhite;*/
     display: flex;
     justify-content: left;
 }
@@ -51,7 +45,6 @@ h1 {
 #powerBarLeft {
     width: calc(50%);
     left: 0px;
-    /*background: aliceblue;*/
     display: flex;
     justify-content: right;
 }
